fixed alert z-index, stay on the same page for follows

--- a/static/stylesheets/style.css
+++ b/static/stylesheets/style.css
@@ -20,6 +20,10 @@ body.error-404 {
   cursor: pointer;
 }
 
+.alert{
+  z-index: 2;
+}
+
 /* ======================= Nav */
 
 .navbar {
